| Bug #51223 | ndb_restore segfault on orphaned index | ||
|---|---|---|---|
| Submitted: | 16 Feb 2010 22:30 | Modified: | 23 Feb 2010 9:42 |
| Reporter: | Andrew Hutchings | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S1 (Critical) |
| Version: | 7.0.11 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[16 Feb 2010 22:30]
Andrew Hutchings
[20 Feb 2010 11:26]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/100966 3094 Jonas Oreland 2010-02-20 ndb - bug#51223 - missing error handling in ndbapi leading to ndb_restore segfault on corrupt backup
[22 Feb 2010 9:40]
Jonas Oreland
pushed to 6.3.32, 7.0.13 and 7.1.2
[23 Feb 2010 9:42]
Jon Stephens
Documented bugfix in the NDB-6.3.32, 7.0.13, and 7.1.2 changelogs, as follows:
ndb_restore crashed while trying to restore a corrupted backup,
due to missing error handling.
Closed.
