ndb - bug#51223 - missing error handling in ndbapi leading to ndb_restore segfault on corrupt backup